agregando metodo de paginacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=root
 spring.datasource.password=fidoloco1
 spring.jpa.hibernate.ddl-auto=update
+
+#Config de la paginacion
+spring.data.rest.page-param-name=page
+spring.data.rest.limit-param-name=limit
+spring.data.rest.sort-param-name=sort
+spring.data.rest.default-page-size=1
+spring.data.rest.max-page-size=1
